# snarkjs-bellman-adapter

./: .gitmodules  README.md  start.sh  start_bls.sh  start_maci.md  start_maci_bn128.sh  start_plonk.sh
bellman-ce-verifier/: Cargo.toml
bellman-ce-verifier/src/: lib.rs  verifier.rs
bellman-verifier/: Cargo.toml
bellman-verifier/src/: lib.rs  verifier.rs
circuit/: circuit_final.zkey  proof.json  proof_uncompressed.json  verification_key.json  vkey_uncompressed.json
circuit/MACI/: ecdh.circom  hasherPoseidon.circom  hasherSha256.circom  messageHasher.circom  messageToCommand.circom  messageValidator.circom  package.json  privToPubKey.circom  processMessages.circom  stateLeafTransformer.circom  tallyVotes.circom  unpackElement.circom  verifySignature.circom
circuit/MACI/js/: caculateResult.js  client.js  genInputs.js  getContractLogs.js  index.test.js  keypair.js  maci.js  maci.test.js  parseWhitelist.js  poseidon-code.js  printProof.js  printVerifyingKey.js  tree.js
circuit/MACI/js/data/: logs.json  msg-input_0000.json  tally-input_0000.json
circuit/MACI/lib/: poseidonDecrypt.circom
circuit/MACI/prod/: msg.circom  tally.circom
circuit/MACI/trees/: checkRoot.circom  incrementalMerkleTree.circom  incrementalQuinTree.circom  zeroRoot.circom
circuit/Multiplication/: circuit.circom  input.json
prove/: package-lock.json  package.json
prove/src/: adapt_maci.js  adapt_proof.js  adapt_verification_key.js  adapter.js
prove/utils/: misc.js  zkey_utils.js
ptau/: ptau.md
verify/: Cargo.toml
verify/src/: main.rs
verify/src/adapter/: mod.rs  parser.rs  parser_bls.rs  parser_bn.rs  types.rs
verify/src/circuit/: mod.rs
