[package]
name = "bellman-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
pairing = "0.22.0"
bls12_381 = "0.7.0"
bellman = "0.13.1"
bellman_ce = { git = "https://github.com/VegeBun-csj/bellman_ce.git" }
group = "0.12.0"
ff = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pairing_ce = { git = "https://github.com/VegeBun-csj/pairing.git" }
ff_ce = "0.14.3"